# codex_no5-5

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: app.js  i18n.js  index.html  package.json  state.js  styles.css  ui.test.js
crates/cng/: Cargo.toml
crates/cng-codex/: Cargo.toml
crates/cng-codex/src/: main.rs
crates/cng-core/: Cargo.toml
crates/cng-core/src/: codex.rs  config.rs  diagnostics.rs  discovery.rs  lib.rs  model.rs  proxy.rs  rpc.rs  service.rs
crates/cng-core/tests/: proxy_integration.rs
crates/cng/src/: main.rs
crates/cngd/: Cargo.toml
crates/cngd/src/: main.rs
docs/: architecture.md  testing.md
scripts/: build-macos-universal.sh  build-windows-portable.ps1
