[workspace]
resolver = "2"
members = [
  "crates/cng-core",
  "crates/cngd",
  "crates/cng",
  "crates/cng-codex",
  "apps/desktop/src-tauri",
]
default-members = [
  "crates/cng-core",
  "crates/cngd",
  "crates/cng",
  "crates/cng-codex",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
http = "1.3"
libc = "0.2"
percent-encoding = "2.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
rustls = "0.23"
rustls-native-certs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
tokio-socks = "0.5"
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
