[package]
name = "cng-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
http.workspace = true
libc.workspace = true
percent-encoding.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-socks.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.23"
