[package]
name = "cng-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
ico = "0.5"
png = "0.17"
tauri-build = { version = "2.5", features = [] }

[dependencies]
anyhow.workspace = true
cng-core = { path = "../../../crates/cng-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.10", features = ["tray-icon"] }
tokio.workspace = true
